testsuite/poke.pkl/printf-diag-24.pk
/* { dg-do compile } */

printf (" %f64b %s", 1U, "Hi"); /* { dg-error "" } */
